Génération synthèse de la campagne et journalière

--- a/src/main/custom/configuration/config-sogedi.properties
+++ b/src/main/custom/configuration/config-sogedi.properties
@@ -1,14 +1,26 @@
-# VENTES
+# SOGEDI
 com.moovapps.sogedi.organization.name=DefaultOrganization
 com.moovapps.sogedi.project.name=SOGEDI
 com.moovapps.sogedi.libray.name=Espace Documentaire
 com.moovapps.sogedi.temp.folder=D:\\VDocPlatformSOGEDI\\tempFolder
+#PROCESSUS DE VENTE
+com.moovapps.sogedi.vente.catalog.name=VenteAComptant
+com.moovapps.sogedi.vente.workflow.name=VenteAComptant_1.0
 
-# BORDEREAU DE MOUVEMENT DE BOUTEILLE
 com.moovapps.sogedi.vente.libray.modele.bmb.path=Modèles de documents/Bmb.docx
 com.moovapps.sogedi.vente.bmb.champ.name=BonDeMouvementDeBouteille
 com.moovapps.sogedi.vente.bmb.titre=Bmb généré
-# FACTURE
+
 com.moovapps.sogedi.vente.libray.modele.facture.path=Modèles de documents/Facture.docx
-com.moovapps.sogedi.vente.facture.champ.name=Facture
+com.moovapps.sogedi.vente.facture.champ.name=FactureGeneree
 com.moovapps.sogedi.vente.facture.titre=Facture générée
+#PROCESSUS DE REAPPROVISIONNEMENT DE DEPOT
+com.moovapps.sogedi.appro.catalog.name=ApprovisionnementDeDepot
+com.moovapps.sogedi.appro.workflow.name=DemandeDApprovisionnementDeDepot_1.0
+#PROCESSUS DE PRODUCTION
+com.moovapps.sogedi.production.catalog.name=ProductionDeBouteilles
+com.moovapps.sogedi.campagne.workflow.name=CampagneDeProduction_1.0
+com.moovapps.sogedi.rampe.workflow.name=NouvelleRampe_1.0
+com.moovapps.sogedi.syntheseJournaliere.workflow.name=SyntheseJournaliere_1.0
+
+
