--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/SOGEDI.vdoc.ear"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/SOGEDI.jboss.common.lib"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/SOGEDI.server.all.lib"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/SOGEDI.vdoc.ear.lib"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/SOGEDI"/>
 	<classpathentry kind="output" path="target"/>
 </classpath>
